# MusicLang

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  compile_commands.json  main.cpp
examples/: Random.ml  TheLick.ml
include/: Ast.hpp  Benchmark.hpp  Builtins.hpp  Enviroment.hpp  Evaluator.hpp  Lexer.hpp  Object.hpp  Parser.hpp  Token.hpp
src/: Ast.cpp  Benchmark.cpp  Builtins.cpp  Enviroment.cpp  Evaluator.cpp  Lexer.cpp  Parser.cpp  main.cpp
